tests/baselines/reference/asyncConstructor_es5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
asyncConstructor_es5.ts(2,3): error TS1089: 'async' modifier cannot appear on a constructor declaration.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== asyncConstructor_es5.ts (1 errors) ====
    class C {
      async constructor() {
      ~~~~~
!!! error TS1089: 'async' modifier cannot appear on a constructor declaration.
      }
    }